package main

import (
	"context"
	"log"
	"net"

	"google.golang.org/grpc"
	"offline-service/internal/pb"
)

// FilterStub - –∑–∞–≥–ª—É—à–∫–∞ —Å–µ—Ä–≤–∏—Å–∞ —Ñ–∏–ª—å—Ç—Ä–∞—Ü–∏–∏
type FilterStub struct {
	pb.UnimplementedFilterServiceServer
}

func (s *FilterStub) FilterData(ctx context.Context, req *pb.FilterRequest) (*pb.FilterResponse, error) {
	// –ü—Ä–æ–≤–µ—Ä—è–µ–º –Ω–∞ nil –ø–µ—Ä–µ–¥ –¥–æ—Å—Ç—É–ø–æ–º –∫ –ø–æ–ª—è–º
	if req.MedicalData == nil {
		log.Printf("üîß FilterStub: Received nil medical data for session %s", req.SessionId)
		// –í–æ–∑–≤—Ä–∞—â–∞–µ–º –ø—É—Å—Ç—ã–µ –¥–∞–Ω–Ω—ã–µ –≤–º–µ—Å—Ç–æ –ø–∞–Ω–∏–∫–∏
		return &pb.FilterResponse{
			FilteredData: &pb.MedicalData{
				Bpm:    &pb.TimeSeries{TimeSec: []float64{}, Value: []float64{}},
				Uterus: &pb.TimeSeries{TimeSec: []float64{}, Value: []float64{}},
			},
			SessionId: req.SessionId,
			Status:    "success",
			Message:   "Received empty data, returning empty response",
		}, nil
	}

	// –ë–µ–∑–æ–ø–∞—Å–Ω—ã–π –¥–æ—Å—Ç—É–ø –∫ –¥–∞–Ω–Ω—ã–º
	bpmPoints := 0
	uterusPoints := 0

	if req.MedicalData.Bpm != nil {
		bpmPoints = len(req.MedicalData.Bpm.TimeSec)
	}
	if req.MedicalData.Uterus != nil {
		uterusPoints = len(req.MedicalData.Uterus.TimeSec)
	}

	log.Printf("üîß FilterStub: Received data for session %s", req.SessionId)
	log.Printf("   BPM points: %d, Uterus points: %d", bpmPoints, uterusPoints)

	// –°–æ–∑–¥–∞–µ–º –±–µ–∑–æ–ø–∞—Å–Ω—É—é –∫–æ–ø–∏—é –¥–∞–Ω–Ω—ã—Ö
	filteredData := &pb.MedicalData{}

	if req.MedicalData.Bpm != nil {
		filteredData.Bpm = &pb.TimeSeries{
			TimeSec: req.MedicalData.Bpm.TimeSec,
			Value:   req.MedicalData.Bpm.Value,
		}
	} else {
		filteredData.Bpm = &pb.TimeSeries{TimeSec: []float64{}, Value: []float64{}}
	}

	if req.MedicalData.Uterus != nil {
		filteredData.Uterus = &pb.TimeSeries{
			TimeSec: req.MedicalData.Uterus.TimeSec,
			Value:   req.MedicalData.Uterus.Value,
		}
	} else {
		filteredData.Uterus = &pb.TimeSeries{TimeSec: []float64{}, Value: []float64{}}
	}

	// –ü—Ä–æ—Å—Ç–æ –≤–æ–∑–≤—Ä–∞—â–∞–µ–º —Ç–µ –∂–µ –¥–∞–Ω–Ω—ã–µ –±–µ–∑ –∏–∑–º–µ–Ω–µ–Ω–∏–π
	return &pb.FilterResponse{
		FilteredData: filteredData,
		SessionId:    req.SessionId,
		Status:       "success",
		Message:      "Data filtered successfully",
	}, nil
}

// MLStub - –∑–∞–≥–ª—É—à–∫–∞ ML —Å–µ—Ä–≤–∏—Å–∞
type MLStub struct {
	pb.UnimplementedMLServiceServer
}

func (s *MLStub) Predict(ctx context.Context, req *pb.PredictRequest) (*pb.PredictResponse, error) {
	// –ü—Ä–æ–≤–µ—Ä—è–µ–º –Ω–∞ nil –ø–µ—Ä–µ–¥ –¥–æ—Å—Ç—É–ø–æ–º –∫ –ø–æ–ª—è–º
	if req.MedicalData == nil {
		log.Printf("ü§ñ MLStub: Received nil medical data for session %s", req.SessionId)
		return &pb.PredictResponse{
			Prediction: 0.5,
			SessionId:  req.SessionId,
			Status:     "success",
			Message:    "Received empty data, using default prediction",
		}, nil
	}

	// –ë–µ–∑–æ–ø–∞—Å–Ω—ã–π –¥–æ—Å—Ç—É–ø –∫ –¥–∞–Ω–Ω—ã–º
	bpmPoints := 0
	uterusPoints := 0

	if req.MedicalData.Bpm != nil {
		bpmPoints = len(req.MedicalData.Bpm.TimeSec)
	}
	if req.MedicalData.Uterus != nil {
		uterusPoints = len(req.MedicalData.Uterus.TimeSec)
	}

	log.Printf("ü§ñ MLStub: Received prediction request for session %s", req.SessionId)
	log.Printf("   BPM points: %d, Uterus points: %d", bpmPoints, uterusPoints)

	// –ì–µ–Ω–µ—Ä–∏—Ä—É–µ–º "—Ä–µ–∞–ª–∏—Å—Ç–∏—á–Ω—ã–π" –ø—Ä–µ–¥–∏–∫—Ç –Ω–∞ –æ—Å–Ω–æ–≤–µ –¥–∞–Ω–Ω—ã—Ö
	prediction := s.calculatePrediction(req.MedicalData)

	log.Printf("ü§ñ MLStub: Prediction for session %s: %.4f", req.SessionId, prediction)

	return &pb.PredictResponse{
		Prediction: prediction,
		SessionId:  req.SessionId,
		Status:     "success",
		Message:    "Prediction calculated successfully",
	}, nil
}

func (s *MLStub) calculatePrediction(medicalData *pb.MedicalData) float64 {
	// –ë–µ–∑–æ–ø–∞—Å–Ω—ã–π —Ä–∞—Å—á–µ—Ç —Å –ø—Ä–æ–≤–µ—Ä–∫–æ–π –Ω–∞ nil
	if medicalData == nil || medicalData.Bpm == nil || len(medicalData.Bpm.Value) == 0 {
		return 0.5 // –Ω–µ–π—Ç—Ä–∞–ª—å–Ω—ã–π –ø—Ä–µ–¥–∏–∫—Ç –ø–æ —É–º–æ–ª—á–∞–Ω–∏—é
	}

	var totalBPM, totalUterus float64
	var bpmCount, uterusCount int

	// –°—á–∏—Ç–∞–µ–º BPM
	if medicalData.Bpm != nil && len(medicalData.Bpm.Value) > 0 {
		for _, val := range medicalData.Bpm.Value {
			totalBPM += float64(val)
		}
		bpmCount = len(medicalData.Bpm.Value)
	}

	// –°—á–∏—Ç–∞–µ–º Uterus
	if medicalData.Uterus != nil && len(medicalData.Uterus.Value) > 0 {
		for _, val := range medicalData.Uterus.Value {
			totalUterus += float64(val)
		}
		uterusCount = len(medicalData.Uterus.Value)
	}

	// –ï—Å–ª–∏ –Ω–µ—Ç –¥–∞–Ω–Ω—ã—Ö, –≤–æ–∑–≤—Ä–∞—â–∞–µ–º –∑–Ω–∞—á–µ–Ω–∏–µ –ø–æ —É–º–æ–ª—á–∞–Ω–∏—é
	if bpmCount == 0 {
		return 0.5
	}

	avgBPM := totalBPM / float64(bpmCount)
	avgUterus := 0.0
	if uterusCount > 0 {
		avgUterus = totalUterus / float64(uterusCount)
	}

	// –ü—Ä–æ—Å—Ç–∞—è "–º–æ–¥–µ–ª—å" –Ω–∞ –æ—Å–Ω–æ–≤–µ —Å—Ä–µ–¥–Ω–∏—Ö –∑–Ω–∞—á–µ–Ω–∏–π
	prediction := 0.3 + (avgBPM-140)*0.001 + (avgUterus-15)*0.01

	// –û–≥—Ä–∞–Ω–∏—á–∏–≤–∞–µ–º –º–µ–∂–¥—É 0 –∏ 1
	if prediction < 0 {
		prediction = 0
	}
	if prediction > 1 {
		prediction = 1
	}

	return prediction
}

func startFilterStub() {
	lis, err := net.Listen("tcp", ":50051")
	if err != nil {
		log.Fatalf("‚ùå Failed to listen: %v", err)
	}

	s := grpc.NewServer()
	pb.RegisterFilterServiceServer(s, &FilterStub{})

	log.Printf("üîß Filter stub server listening at %v", lis.Addr())

	if err := s.Serve(lis); err != nil {
		log.Fatalf("‚ùå Failed to serve filter stub: %v", err)
	}
}

func startMLStub() {
	lis, err := net.Listen("tcp", ":50052")
	if err != nil {
		log.Fatalf("‚ùå Failed to listen: %v", err)
	}

	s := grpc.NewServer()
	pb.RegisterMLServiceServer(s, &MLStub{})

	log.Printf("ü§ñ ML stub server listening at %v", lis.Addr())

	if err := s.Serve(lis); err != nil {
		log.Fatalf("‚ùå Failed to serve ML stub: %v", err)
	}
}

func main() {
	log.Println("üöÄ Starting gRPC stubs...")

	// –ó–∞–ø—É—Å–∫–∞–µ–º –æ–±–∞ —Å–µ—Ä–≤–∏—Å–∞ –≤ –æ—Ç–¥–µ–ª—å–Ω—ã—Ö –≥–æ—Ä—É—Ç–∏–Ω–∞—Ö
	go startFilterStub()
	go startMLStub()

	log.Println("‚úÖ All gRPC stubs are running!")
	log.Println("   - Filter service: localhost:50051")
	log.Println("   - ML service: localhost:50052")
	log.Println("   Press Ctrl+C to stop")

	// –ë–µ—Å–∫–æ–Ω–µ—á–Ω–æ–µ –æ–∂–∏–¥–∞–Ω–∏–µ
	select {}
}
